@@ -23,6 +23,8 @@ Version 1.6.1
   cgroups/cpusets restrict the available CPUs.
 * Fix the pkg-config output with --libs --static.
   Thanks to Erik Schnetter for reporting one of the problems.
+* Fix the output of hwloc-calc -H --hierarchical when using logical
+  indexes in the output.
 * Calling hwloc_topology_load() multiple times on the same topology
   is officially deprecated. hwloc will warn in such cases.
 * Add some documentation about existing plugins/components, package
